[tool.poetry]
name = "zo-sdk"
version = "0.1.0-beta.3"
license = "Apache-2.0"
description = "01.xyz Python SDK"
authors = ["Sheheryar Parvaz <me@cherryman.org>"]
packages = [{ include = "zo" }]

[tool.poetry.dependencies]
python = "^3.10"
anchorpy = "^0.7.0"
solana = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.pyright]
reportWildcardImportFromLibrary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
