[tool.poetry]
name = "zo-sdk"
version = "0.2.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/01protocol/zo-sdk-py"
documentation = "https://01protocol.github.io/zo-sdk-py/"
description = "01.xyz Python SDK"
authors = ["Sheheryar Parvaz <me@cherryman.org>"]
packages = [{ include = "zo" }]

[tool.poetry.dependencies]
python = "^3.10"
anchorpy = "^0.9.3"
solana = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mkdocstrings = "^0.18.1"
mkdocs-material = "^8.2.5"

[tool.pyright]
reportWildcardImportFromLibrary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
